<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="user_name">User Name</string>
    <string name="todo">TODO</string>
    <string name="log_out">Log out</string>
    <string name="settings">Settings</string>
    <string name="add_a_school">Add a school</string>
    <string name="my_schools">My Schools</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="how_to_use_application">How to use Application</string>
    <string name="feed_back">Feed back</string>
    <string name="contact_us">Contact Us</string>
    <string name="help">HELP</string>
    <string name="inbox">Inbox</string>
    <string name="favorites">Favorites</string>
    <string name="events">Events</string>
    <string name="my_profile">My profile</string>
    <string name="home">Home</string>
    <string name="home_page">home</string>
    <string name="app_name">drawer app</string>
</resources>
