<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/event"
            android:icon="@drawable/ic_events"
            android:title="@string/events" />
        <item
            android:id="@+id/favorites"
            android:icon="@drawable/ic_fav"
            android:title="@string/favorites" />
        <item
            android:id="@+id/inbox"
            android:icon="@drawable/ic_inbox"
            android:title="@string/inbox" />
    </group>
    <item android:title="@string/help">
        <menu android:checkableBehavior="single">
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/contact"
                    android:icon="@drawable/ic_contact"
                    android:title="@string/contact_us" />
                <item
                    android:id="@+id/feedback"
                    android:icon="@drawable/ic_feed"
                    android:title="@string/feed_back" />

                <item
                    android:id="@+id/how_to_use"
                    android:icon="@drawable/ic_account_balance_black_24dp"
                    android:title="@string/how_to_use_application" />
            </group>
        </menu>
    </item>
    <item android:title="@string/dashboard">
        <menu>
            <item
                android:id="@+id/my_school"
                android:icon="@drawable/ic_school_black_24dp"
                android:title="@string/my_schools" />
            <item
                android:id="@+id/add_school"
                android:icon="@drawable/ic_playlist_add_black_24dp"
                android:title="@string/add_a_school" />
            <item
                android:id="@+id/setting"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/log_out" />
        </menu>
    </item>
</menu>
